# ikea-stock-api

./: .replit  IKEA plate _ Recommended plate from IKEA - Page 2 _ IKEA Dairyfarm.html  README.md  access_json.py  app.py  check_product_stock.py  config.py  csv_handler.py  database.py  download_ikea_image.py  hello.py  ikea_products.db  ikea_products_1.json  ikea_products_1_products.csv  ikea_products_2.json  ikea_products_2_products.csv  ikea_products_with_images.csv  image_scraper.py  models.py  pyproject.toml  replit.nix  requirements.txt  scrape_ikea.py  scrape_ikea_firecrawl.py  scrape_ikea_selenium.py  stock_checker.py  stock_results.json  stock_results_partial.json  test_scraper.py  test_stock.json  web_app.py
ikea_stock_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: product_images
templates/: index.html
